--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -1,114 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html lang="en" xmlns:th="http://thymeleaf.org">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Detail</title>-->
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>-->
-<!--    <script th:src="@{/js/review/review.js}" defer></script>-->
-<!--</head>-->
-<!--<body>-->
-<!--<th:block th:each="img : ${productImages}">-->
-<!--    <img th:src="@{/images/{filename}(filename=${img.productImgSavedName})}" alt="" height="100"/>-->
-<!--</th:block>-->
-<!--<table>-->
-<!--    <tr>-->
-<!--        <th>상품아이디</th>-->
-<!--        <td th:text="${product.id}"></td>-->
-<!--    </tr>-->
-<!--    <tr>-->
-<!--        <th>날짜</th>-->
-<!--        <td th:text="${product.productCreateTime}"></td>-->
-<!--    </tr>-->
-<!--    <tr>-->
-<!--        <th>조회수</th>-->
-<!--        <td th:text="${product.productHits}"></td>-->
-<!--    </tr>-->
-<!--    <tr>-->
-<!--        <th>상품명</th>-->
-<!--        <td th:text="${product.productName}"></td>-->
-<!--    </tr>-->
-<!--    <tr>-->
-<!--        <th>상품색상</th>-->
-<!--        <td th:text="${product.productColor}"></td>-->
-<!--    </tr>-->
-<!--    <tr>-->
-<!--        <th>상품사이즈</th>-->
-<!--        <td th:text="${product.productSize}"></td>-->
-<!--    </tr>-->
-<!--    <tr>-->
-<!--        <th>설명</th>-->
-<!--        <td th:text="${product.productDescription}"></td>-->
-<!--    </tr>-->
-<!--    <tr>-->
-<!--        <th>상품작성자</th>-->
-<!--        <td th:text="${product.productWriter}"></td>-->
-<!--    </tr>-->
-<!--</table>-->
-<!--<button onclick="listReq()">목록</button>-->
-<!--<button onclick="updateReq()">수정</button>-->
-<!--<button onclick="deleteReq()">삭제</button>-->
-<!--<div class="review-con">-->
-
-<!--    <div class="review-write">-->
-
-<!--        &lt;!&ndash; 덧글 작성 &ndash;&gt;-->
-<!--        &lt;!&ndash;          <form th:action="@{/reply/write}" method="post">&ndash;&gt;-->
-<!--        &lt;!&ndash; 게시글 번호 ** 필수 &ndash;&gt;-->
-<!--        <input type="hidden" readonly name="productId"-->
-<!--               th:value="${product.id}" id="productId">-->
-<!--        <ul>-->
-<!--            <li>-->
-<!--&lt;!&ndash;                <input type="file" name="upload_file" id="upload_file">&ndash;&gt;-->
-<!--                <textarea name="review" id="review"-->
-<!--                          cols="30" rows="1" placeholder="내용작성"></textarea>-->
-<!--            </li>-->
-<!--            <li>-->
-<!--                &lt;!&ndash;                <input type="submit" value="덧글작성">&ndash;&gt;-->
-<!--                <input type="button" value="댓글작성" id="ajaxBtn">-->
-
-
-<!--&lt;!&ndash;                <input type="text" value="0" id="star">&ndash;&gt;-->
-<!--            </li>-->
-<!--        </ul>-->
-<!--        &lt;!&ndash;          </form>&ndash;&gt;-->
-<!--    </div>-->
-<!--    <div class="review-list">-->
-<!--        <div id="reviewCount"></div>-->
-<!--        <input type="hidden" th:id="prId" th:value="${product.id}">-->
-<!--        &lt;!&ndash; 덧글리스트 &ndash;&gt;-->
-<!--        <div id="tData">-->
-<!--            <ul th:each="review : ${reviews}">-->
-<!--                <li th:text="${review.review}">-->
-<!--                    <input type="hidden" name="">-->
-<!--                </li>-->
-<!--                <li th:text="${review.reviewWriter}"></li>-->
-<!--                <li th:text="${review.createTime}"></li>-->
-<!--                <input type="button" value="삭제" th:onclick="onDelete([[${review.id}]])">-->
-<!--                <input type="button" id="reviewUp" value="수정" th:onclick="onUpdate([[${review.id}]])">-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--</body>-->
-<!--<script th:inline="javascript">-->
-<!--    const listReq = () => {-->
-<!--        console.log("글목록");-->
-<!--        location.href = "/product/list";-->
-<!--    }-->
-<!--    const updateReq = () => {-->
-<!--        console.log("수정");-->
-<!--        const id = [[${product.id}]];-->
-<!--        location.href = "/product/update/" + id;-->
-<!--    }-->
-<!--    const deleteReq = () => {-->
-<!--        console.log("삭제");-->
-<!--        const id = [[${product.id}]];-->
-<!--        location.href = "/product/delete/" + id;-->
-<!--    }-->
-
-
-<!--</script>-->
-<!--</html>-->
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"> <!-- 송원철 -->
@@ -116,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Detail</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
+    <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
     <script th:src="@{/js/review/review.js}" defer></script>
 </head>
 <body>
@@ -175,9 +64,14 @@
 </table>
 <!-- 송원철 -->
 </script>
-<form class="wishListForm2" sec:authorize="hasAnyRole('MEMBER', 'SEMIMEMBER', 'SELLER', 'ADMIN')" onsubmit="return addProduct();" th:action="@{(${member != null} ? '/cart/member/' + ${member.getMemberId()} + '/' + ${product.id} : '/cart/semiMember/' + ${#authentication.principal.semiMemberEntity.semiMemberId} + '/' + ${product.id})}" method="post">
-    <input class="form-control text-center me-3" id="amount" name="amount" type="num" value="1" style="max-width: 3rem"/>
-    <button class="btn btn-outline-dark flex-shrink-0" id="wish" type="submit"><i class="bi-cart-fill me-1"></i>장바구니</button>
+<form class="wishListForm2" sec:authorize="hasAnyRole('MEMBER', 'SEMIMEMBER', 'SELLER', 'ADMIN')"
+      onsubmit="return addProduct();"
+      th:action="@{(${member != null} ? '/cart/member/' + ${member.getMemberId()} + '/' + ${product.id} : '/cart/semiMember/' + ${#authentication.principal.semiMemberEntity.semiMemberId} + '/' + ${product.id})}"
+      method="post">
+    <input class="form-control text-center me-3" id="amount" name="amount" type="num" value="1"
+           style="max-width: 3rem"/>
+    <button class="btn btn-outline-dark flex-shrink-0" id="wish" type="submit"><i class="bi-cart-fill me-1"></i>장바구니
+    </button>
 </form>
 <script th:inline="javascript">
     /* <![CDATA[ */
@@ -214,23 +108,23 @@
 
     <div class="review-write">
 
-
-        <input type="hidden" readonly name="productId"
-               th:value="${product.id}" id="productId">
-        <ul>
-            <li>
+        <form id="reviewForm" enctype="multipart/form-data">
+            <input type="hidden" readonly name="productId"
+                   th:value="${product.id}" id="productId">
+            <ul>
+                <li>
                 <textarea name="review" id="review"
                           cols="30" rows="1" placeholder="내용작성"></textarea>
-            </li>
-            <li>
-                <label for="reviewFile">리뷰사진</label>
-                <input type="file" name="reviewFile" id="reviewFile">
-            </li>
-            <li>
-                <input type="button" value="댓글작성" id="ajaxBtn">
-            </li>
-        </ul>
-
+                </li>
+                <li>
+                    <label for="reviewFile">리뷰사진</label>
+                    <input type="file" name="reviewFile" id="reviewFile">
+                </li>
+                <li>
+                    <input type="button" value="댓글작성" id="ajaxBtn">
+                </li>
+            </ul>
+        </form>
     </div>
     <div class="review-list">
         <div id="reviewCount"></div>
@@ -244,8 +138,12 @@
                     <input type="hidden" id="upReview" th:value="${review.id}">
                 </li>
                 <input type="button" value="삭제" th:onclick="onDelete([[${review.id}]])">
-                <button type="button" class="reviewUpBtn" data-toggle="collapse" data-target=".multi-collapse-[[${review.id}]]" value="수정" th:onclick="onUpdate([[${review.id}]])">수정</button>
-                <form th:action="@{/review/up/[[${review.id}]]}" method="post" id="upForm" class="collapse multi-collapse-[[${review.id}]]">
+                <button type="button" class="reviewUpBtn" data-toggle="collapse"
+                        data-target=".multi-collapse-[[${review.id}]]" value="수정"
+                        th:onclick="onUpdate([[${review.id}]])">수정
+                </button>
+                <form th:action="@{/review/up/[[${review.id}]]}" method="post" id="upForm"
+                      class="collapse multi-collapse-[[${review.id}]]">
                     <div class="form-group">
                     <textarea id="upRv" cols="1000" rows="3" placeholder="내용을 작성하세요." required="required">
                         [[${review.review}]]
@@ -262,20 +160,20 @@
 </div>
 </body>
 <script th:inline="javascript">
-const listReq = () => {
-console.log("글목록");
-location.href = "/product/list";
-}
-const updateReq = () => {
-console.log("수정");
-const id = [[${product.id}]];
-location.href = "/product/update/" + id;
-}
-const deleteReq = () => {
-console.log("삭제");
-const id = [[${product.id}]];
-location.href = "/product/delete/" + id;
-}
+    const listReq = () => {
+    console.log("글목록");
+    location.href = "/product/list";
+    }
+    const updateReq = () => {
+    console.log("수정");
+    const id = [[${product.id}]];
+    location.href = "/product/update/" + id;
+    }
+    const deleteReq = () => {
+    console.log("삭제");
+    const id = [[${product.id}]];
+    location.href = "/product/delete/" + id;
+    }
 
 
 </script>
