--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,14 +34,38 @@
                         <div class="con">
                             <div id="slideShow">
                                 <ul class="slides">
-                                    <li><img src="images/main/mainSilderImg/main-slider-item1.jpg" alt="no img"></li>
-                                    <li><img src="images/main/mainSilderImg/main-slider-item2.jpg" alt="no img"></li>
-                                    <li><img src="images/main/mainSilderImg/main-slider-item3.jpg" alt="no img"></li>
-                                    <li><img src="images/main/mainSilderImg/main-slider-item4.jpg" alt="no img"></li>
-                                    <li><img src="images/main/mainSilderImg/main-slider-item5.jpg" alt="no img"></li>
-                                    <li><img src="images/main/mainSilderImg/main-slider-item6.jpg" alt="no img"></li>
-                                    <li><img src="images/main/mainSilderImg/main-slider-item7.jpg" alt="no img"></li>
-                                    <li><img src="images/main/mainSilderImg/main-slider-item8.jpg" alt="no img"></li>
+                                    <li>
+                                        <img src="images/main/mainSilderImg/main-slider-item1.jpg" alt="no img">
+                                        <span>이벤트 문구 테스트</span>
+                                    </li>
+                                    <li>
+                                        <img src="images/main/mainSilderImg/main-slider-item2.jpg" alt="no img">
+                                        <span>이벤트 문구 테스트</span>
+                                    </li>
+                                    <li>
+                                        <img src="images/main/mainSilderImg/main-slider-item3.jpg" alt="no img">
+                                        <span>이벤트 문구 테스트</span>
+                                    </li>
+                                    <li>
+                                        <img src="images/main/mainSilderImg/main-slider-item4.jpg" alt="no img">
+                                        <span>이벤트 문구 테스트</span>
+                                    </li>
+                                    <li>
+                                        <img src="images/main/mainSilderImg/main-slider-item5.jpg" alt="no img">
+                                        <span>이벤트 문구 테스트</span>
+                                    </li>
+                                    <li>
+                                        <img src="images/main/mainSilderImg/main-slider-item6.jpg" alt="no img">
+                                        <span>이벤트 문구 테스트</span>
+                                    </li>
+                                    <li>
+                                        <img src="images/main/mainSilderImg/main-slider-item7.jpg" alt="no img">
+                                        <span>이벤트 문구 테스트</span>
+                                    </li>
+                                    <li>
+                                        <img src="images/main/mainSilderImg/main-slider-item8.jpg" alt="no img">
+                                        <span>이벤트 문구 테스트</span>
+                                    </li>
                                 </ul>
                                 <p class="controller">
                                     <span class="prev"><img src="images/main/mainSilderImg/main-slide-left.png"
