장바구니 작성중

--- a/src/main/resources/templates/product/write.html
+++ b/src/main/resources/templates/product/write.html
@@ -12,8 +12,10 @@
 <div class="container">
   <form action="/product/write" id="product-form" method="post" enctype="multipart/form-data">
 
-    
 
+    <!-- 송원철 -->
+
+    <!--------------->
     <table>
       <tr>
         <td rowspan="5"></td>
