--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -7,13 +7,13 @@
         <div class="top-nav">
             <div class="top-menu">
                 <ul>
-                    <li><a th:href="@{/notice/list}">공지사항</a></li>
+                    <li><a th:href="@{/notice/list(page=0 ,search=${param.search} ,select=${param.select})}">공지사항</a></li>
                     <th:block sec:authorize="isAuthenticated()">
                         <li><a th:href="@{/inquiry/list}">문의하기</a></li>
                     </th:block>
                     <th:block sec:authorize="isAnonymous()">
-                        <li><a th:href="@{/login}">로그인</a></li>
-                        <li><a th:href="@{/join}">회원가입</a></li>
+                        <li><a th:href="@{/member/login}">로그인</a></li>
+                        <li><a th:href="@{/member/join}">회원가입</a></li>
                     </th:block>
                     <th:block sec:authorize="hasAnyRole('ADMIN')">
                         <li><a th:href="@{/admin/detail}">관리자페이지</a></li>
