--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -16,14 +16,16 @@
         </div>
         <div class="search">
             <div id="form">
-                <form th:action="@{/notice/search}" method="get">
+                <form th:action="@{/notice/list(page=0 ,search=${param.search} ,select=${param.select})}" method="get">
                     <select name="select" id="select" class="select">
-                        <option th:value="''">전체</option>
-                        <option th:value="title">제목</option>
-                        <option th:value="content">내용</option>
+<!--                        param값을 가져와서 검색-->
+                        <option th:value="''" th:selected="${#strings.isEmpty(param.select)}">전체</option>
+                        <option th:value="noticeTitle" th:selected="${#strings.equals(param.select, 'noticeTitle')}">제목</option>
+                        <option th:value="noticeContent" th:selected="${#strings.equals(param.select, 'noticeContent')}">내용</option>
                     </select>
                     <input type="text" name="search" id="search" th:value="${param.search}" placeholder="검색어를 입력하세요.">
-                    <input type="image" onclick="alert('검색')" th:src="@{/images/zoom.png}" value="검색">
+<!--                    <input type="image" onclick="alert('검색')" th:src="@{/images/zoom.png}" value="검색">-->
+                    <input type="submit" value="검색">
                 </form>
             </div>
         </div>
@@ -31,7 +33,7 @@
                 <ul>
                     <li>
                         <span>
-                            <a th:href="@{/notice/list}">전체</a>
+                            <a th:href="@{/notice/list(page=0 ,search=${param.search} ,select=${param.select})}">전체</a>
                         </span>
                     </li>
                     <li>
@@ -59,13 +61,13 @@
         <table>
             <thead>
             <tr>
-                <th width="11%;">구분</th>
-                <th class="title" width="37%;">제목</th>
-                <th width="10%;">작성자</th>
-                <th width="10%;">생성시간</th>
-                <th width="10%;">수정시간</th>
-                <th width="11%;">조회수</th>
-                <th width="11%;">｡◕‿◕｡</th>
+                <th class="type">구분</th>
+                <th class="title">제목</th>
+                <th class="writer">작성자</th>
+                <th class="create">생성시간</th>
+                <th class="update">수정시간</th>
+                <th class="hit">조회수</th>
+                <th class="detail">｡◕‿◕｡</th>
             </tr>
             </thead>
             <tbody>
@@ -85,14 +87,14 @@
                 <li>
                     <span th:if="${1 == noticeList.pageable.pageNumber+1}" style="font-weight:bold" class="span0"></span>
                     <span th:unless="${1 == noticeList.pageable.pageNumber+1}">
-                        <a th:href="@{/notice/list(page=0)}" class="span1">처음</a>
+                        <a th:href="@{/notice/list(page=0, search=${param.search}, select=${param.select})}" class="span1">처음</a>
                         <!--처음으로 이동-->
                     </span>
                 </li>
                 <li>
                     <span th:if="${1 == noticeList.pageable.pageNumber+1}" style="font-weight:bold" class="span0"></span>
                     <span th:unless="${1 == noticeList.pageable.pageNumber+1}">
-                        <a th:href="@{/notice/list(page=${noticeList.pageable.pageNumber-1})}" class="=span1">이전</a>
+                        <a th:href="@{/notice/list(page=${noticeList.pageable.pageNumber-1}, search=${param.search}, select=${param.select})}" class="=span1">이전</a>
                         <!--이전페이지로 이동-->
                     </span>
                 </li>
@@ -100,20 +102,20 @@
                     <!--블럭 처리-->
                     <li th:each="i: ${#numbers.sequence(startPage, endPage)}" class="block">
                         <span th:if="${i == noticeList.pageable.pageNumber+1}" th:text="${i}" class="now"></span>
-                        <a th:unless="${i == noticeList.pageable.pageNumber+1}" th:href="@{/notice/list(page=${i - 1})}" th:text="${i}"></a>
+                        <a th:unless="${i == noticeList.pageable.pageNumber+1}" th:href="@{/notice/list(page=${i - 1}, search=${param.search}, select=${param.select})}" th:text="${i}"></a>
                     </li>
                 </li>
                 <li>
                     <span th:if="${noticeList.totalPages == noticeList.pageable.pageNumber + 1}" class="span0">끝</span>
                     <span th:unless="${noticeList.totalPages == noticeList.pageable.pageNumber + 1}">
-                        <a th:href="@{/notice/list(page=${noticeList.pageable.pageNumber + 1})}" classa="span1">다음</a>
+                        <a th:href="@{/notice/list(page=${noticeList.pageable.pageNumber + 1}, search=${param.search}, select=${param.select})}" classa="span1">다음</a>
                     </span>
                 </li>
                 <li>
                     <!--현재 페이지가 마지막 페이지이면 span표시-->
                     <span th:if="${noticeList.totalPages == noticeList.pageable.pageNumber + 1}" class="span0">END</span>
                     <span th:unless="${noticeList.totalPages == noticeList.pageable.pageNumber + 1}">
-                        <a th:href="@{/notice/list(page=${noticeList.totalPages-1})}" class="span1">마지막</a>
+                        <a th:href="@{/notice/list(page=${noticeList.totalPages-1}, search=${param.search}, select=${param.select})}" class="span1">마지막</a>
                     </span>
                 </li>
             </ul>
