--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="search">
-            <div id="form">
+            <div class="form">
                 <form th:action="@{/notice/list(page=0 ,search=${param.search} ,select=${param.select})}" method="get">
                     <select name="select" id="select" class="select">
 <!--                        param값을 가져와서 검색-->
@@ -61,9 +61,9 @@
         <table>
             <thead>
             <tr>
-                <th class="type">구분</th>
-                <th class="title">제목</th>
-                <th class="writer">작성자</th>
+                <th class="th_type">구분</th>
+                <th class="th_title">제목</th>
+                <th class="th_writer">작성자</th>
                 <th class="create">생성시간</th>
                 <th class="update">수정시간</th>
                 <th class="hit">조회수</th>
