--- a/src/main/resources/static/css/notice/list.css
+++ b/src/main/resources/static/css/notice/list.css
@@ -24,7 +24,7 @@
     border-bottom: 2px solid #7285d3a4;
 }
 .List .List-con .search{
-    padding: 0 0 0 10px;
+    padding: 10px 0 0 10px;
     box-sizing: border-box;
     justify-content: center;
     /* line-height: 20px; */
