--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -16,7 +16,7 @@
     <script th:src="@{/js/member/addressApi.js}" defer="defer"></script> <!-- 카카오 주소 api -->
 </head>
 <body>
-<!--<div th:replace="~{fragments/common/header :: headerFragment}"></div>-->
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <div class="join">
     <h1>일반 회원가입</h1>
     <form th:action="@{/member/join}" method="post" id="signupForm" th:object="${memberDto}">
