--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script th:src="@{/js/member/tempPasswordLogin.js}" defer="defer"></script>
 </th:block>
-<!--<div th:replace="~{fragments/common/header :: headerFragment}"></div>-->
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <!--<div th:replace="~{fragments/common/header_SONG :: headerFragment}"></div>-->
 <th:block layout:fragment="container">
     <div class="container">
