--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -12,8 +12,8 @@
                         <li><a th:href="@{/inquiry/list}">문의하기</a></li>
                     </th:block>
                     <th:block sec:authorize="isAnonymous()">
-                        <li><a th:href="@{/member/login}">로그인</a></li>
-                        <li><a th:href="@{/member/join}">회원가입</a></li>
+                        <li><a th:href="@{/login}">로그인</a></li>
+                        <li><a th:href="@{/join}">회원가입</a></li>
                     </th:block>
                     <th:block sec:authorize="hasAnyRole('ADMIN')">
                         <li><a th:href="@{/admin/detail}">관리자페이지</a></li>
@@ -53,9 +53,7 @@
                     <li>
                         <form th:action="@{/}">
                             <input type="text" name="search" id="search" placeholder="검색어를 입력하세요">
-                            <button type="button">
-                                <input type="image" onclick="alert('검색')" th:src="@{/images/main/mainIcon/search.png}">
-                            </button>
+                            <input type="submit" value="검색">
                         </form>
                     </li>
                 </ul>
