--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,12 +17,21 @@
 <th:block layout:fragment="container">
 
     <div class="moveBtn">
-        <a href="#header">
-            <div class="moveBtnTop">△</div>
-        </a>
-        <a href="#footer">
-            <div class="moveBtnBotton">▽</div>
-        </a>
+        <div class="top">
+            <div class="topBtn">
+                <a href="#header">
+                    <div class="moveBtnTop">△</div>
+                </a>
+            </div>
+         </div>
+         <div class="bottom">
+            <div class="bottomBtn">
+                <a href="#footer">
+                    <div class="moveBtnBotton">▽</div>
+                </a>
+                
+            </div>
+        </div>
     </div>
 
 
