--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -5,7 +5,7 @@
     <title>회원가입</title>
 </head>
 <body>
-<!--<div th:replace="~{fragments/common/header :: headerFragment}"></div>-->
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <!--<div th:replace="~{fragments/common/header_SONG :: headerFragment}"></div>-->
 <h1>회원가입</h1>
 <!-- 일반 회원가입 버튼 -->
@@ -13,4 +13,5 @@
 <!-- 간편 회원가입 버튼 -->
 <button th:onclick="window.location.href='/semiMember/join'">간편 회원가입</button>
 </body>
+
 </html>
