--- a/src/main/resources/static/css/product/write.css
+++ b/src/main/resources/static/css/product/write.css
@@ -9,17 +9,26 @@
   font-family: Pretendard, 'Malgun Gothic', sans-serif;
   font-size: 15px;
 }
-.container {
 
+.--hover{
+  filter: brightness(1.2);
 }
+.--hover2{
+  border: 2px dashed #7286d3;
+}
+
+.container {
+  /* background-color: #f0f2f5; */
+}
+
 .image-container {
   margin: 0 auto;
   margin-top: 20px;
   margin-bottom: 20px;
-  width: 728px;
+  width: 520px;
   min-height: 104px;
-  border: 2px dashed #8c8c8c;
-  border-radius: 15px;
+  border: 1px dashed #dddddd;
+  border-radius: 8px;
   text-align: center;
   padding: 5px;
   background-image: url("/images/product/iconmonstr-picture-5-120.png");
@@ -28,11 +37,6 @@
   background-size: 50px;
   position: relative;
   z-index: 0;
-}
-
- /* hover */
-.imageContainer--hover {
-  filter: brightness(1.35);
 }
 
 .image-dropbox-description-box{
@@ -50,16 +54,14 @@
 }
 
 .image-preview-box-container{
-  width: 728px;
+  width: 520px;
   min-height: 104px;
   display: flex;
   position: relative;
   z-index: 2;
 }
 
-
 .image-preview-box {
-  background-color: #949494;
   width: 100px;
   height: 100px;
   margin: 2px;
@@ -68,6 +70,8 @@
 .image-preview{
   width: 100px;
   height: 100px;
+  border-radius: 3px;
+  box-sizing: border-box;
 }
 
 .add-image-box {
@@ -106,6 +110,35 @@ li .delete-btn {
   cursor: pointer;
 }
 
+.imagePreviewExpand-box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 30px;
+  width: 500px;
+  height: 500px;
+  box-shadow: 0px 0px 3px 0px #b1b1b1;
+}
+
+.imagePreviewExpand{
+  width: 500px;
+  height: 500px;
+  object-fit: cover;
+}
+
+.imagePreviewExpand-alt{
+  width: 200px;
+  height: 200px;
+  filter: 
+    invert(96%) 
+    sepia(0%) 
+    saturate(2405%) 
+    hue-rotate(71deg) 
+    brightness(89%) 
+    contrast(102%);
+  object-fit: cover;
+}
 
 
 
@@ -128,16 +161,15 @@ li .delete-btn {
   padding: 16px;
 }
 
-
 input::placeholder, textarea::placeholder {
-  color: #d9d9d9
+  color: #d9d9d9;
 }
 
 .productInput-label {
   /* display: inline-block; */
   position: relative;
   top: 21px;
-  left: 31px;
+  left: 8px;
   padding: 8px;
   background: white;
   font-size: 14px;
@@ -154,7 +186,7 @@ input::placeholder, textarea::placeholder {
   /* display: inline-block; */
   position: relative;
   top: 11px;
-  left: 31px;
+  left: 8px;
   padding: 8px;
   background: white;
   font-size: 14px;
@@ -167,7 +199,7 @@ input::placeholder, textarea::placeholder {
   vertical-align: -1px;
 }
 
-.radioBtn {
+.productDisplayInputs {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -198,23 +230,189 @@ input[type="radio"] {
   padding: 16px;
 }
 
-table, tr, td {
-  /* border: 1px solid #949494; */
+
+
+
+.grid-wrapper {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 550px 50px 350px 50px 1fr;
+  grid-template-rows: 20px repeat(10, 100px);
+}
+.gridWrapper-prev-drop {
+  grid-area: 2 / 2 / 12 / 3;
+  position: sticky;
+  top: 50px;
+  height: 675px;
+}
+.imagePreviewExpand-wrapper {
+  display: flex;
+  justify-content: center;
+}
+.imageDrop-wrapper {
+  position: relative;
+  top: 30px;
+}
+.grid-productName {
+  grid-area: 2 / 4 / 3 / 5;
+}
+.grid-productColor {
+  grid-area: 3 / 4 / 4 / 5;
+}
+.grid-productSize {
+  grid-area: 4 / 4 / 5 / 5;
+}
+.grid-productPrice {
+  grid-area: 5 / 4 / 6 / 5;
+}
+.grid-productDisplay {
+  grid-area: 6 / 4 / 7 / 5;
+}
+.grid-productDescription {
+  grid-area: 7 / 4 / 10 / 5;
+}
+.grid-productSubmit {
+  grid-area: 10 / 4 / 11 / 5;
 }
 
-table{
-  margin: 0 auto;
-  width: 1200px;
-  border-collapse: collapse;
+
+
+.productColorInputs {
+  position: relative;
+  width: 300px;
+  height: 75px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.productColorInputs input[type=radio]{
+  display: none;
+}
+.productColorInputs input[type=radio]+label{
+  display: inline-block;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%; /* 원형으로 만들기 */
+  text-align: center; /* 텍스트 중앙 정렬 */
+  line-height: 100px; /* 텍스트 수직 중앙 정렬 */
+  position: inherit;
+  top: 8px;
 }
 
-tr{
-  height: 50px;
+.productColorInputs input[type=radio]:checked+label{
+  display: inline-block;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%; /* 원형으로 만들기 */
+  text-align: center; /* 텍스트 중앙 정렬 */
+  line-height: 100px; /* 텍스트 수직 중앙 정렬 */
+  position: inherit;
+  top: 8px;
+  background-image: url("/images/product/iconmonstr-check-mark-17-24.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 70%;
 }
-td{
-  min-width: 375px;
+.productColorInputs input[type=radio]:checked+.--white{
+  display: inline-block;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%; /* 원형으로 만들기 */
+  position: inherit;
+  top: 8px;
+  background-image: url("/images/product/iconmonstr-check-mark-17-24-black.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 70%;
 }
 
-.borderline-left {
-  border-left: 1px solid #888;
+.colorRadioBtn{
+  box-shadow: 0px 0px 3px 0px #b1b1b1;
+}
+
+.--black{
+  background-color: #41444B;
+}
+.--red{
+  background-color: #EF4B4B;
+}
+.--pink{
+  background-color: #E97777;
+}
+.--orange{
+  background-color: #EC8F6A;
+}
+.--yellow{
+  background-color: #FFD966;
+}
+.--green{
+  background-color: #89e28f;
+}
+.--skyblue{
+  background-color: #AEE2FF;
+}
+.--navy{
+  background-color: #6E85B7;
+}
+.--purple{
+  background-color: #BEADFA;
+}
+.--white{
+  background-color: #ffffff;
+}
+
+
+.productDisplayInputs input[type=radio]{
+  display: none;
+}
+.productDisplayInputs input[type=radio]+label{
+  display: inline-block;
+  cursor: pointer;
+  width: 100px;
+  height: 33px;
+  text-align: center; /* 텍스트 중앙 정렬 */
+  line-height: 32px; /* 텍스트 수직 중앙 정렬 */
+  position: relative;
+  top: 8px;
+  box-shadow: 0px 0px 3px 0px #b1b1b1;
+  color: #888;
+  font-size: 14px;
+  font-weight:bold;
+}
+.productDisplayInputs input[type=radio]:checked+label{
+  display: inline-block;
+  cursor: pointer;
+  width: 100px;
+  height: 34px;
+  background-color: #7286d3;
+  text-align: center; /* 텍스트 중앙 정렬 */
+  line-height: 32px; /* 텍스트 수직 중앙 정렬 */
+  position: relative;
+  top: 8px;
+  box-shadow: 0px 0px 3px 0px #b1b1b1;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight:bold;
+}
+.displayBtn1{
+  border-radius: 8px 0 0 8px;
+}
+.displayBtn2{
+  border-radius: 0 8px 8px 0;
+}
+
+
+
+
+.productSubmit{
+  cursor: pointer;
+}
+.productSubmitBtn{
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
