--- a/src/main/resources/templates/inquiry/detail.html
+++ b/src/main/resources/templates/inquiry/detail.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/inquiry/detail.css}">
 </head>
 <body>
-<div th:replace="~{fragments/common/kreamHeader :: headerFragment}"></div>
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <div class="container">
     <div class="detail">
         <div class="detail-con">
