--- a/src/main/resources/templates/inquiry/write.html
+++ b/src/main/resources/templates/inquiry/write.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/inquiry/write.css}">
 </head>
 <body>
-<div th:replace="~{fragments/common/kreamHeader :: headerFragment}"></div>
+<div th:replace="~{fragments/common/header :: headerFragment}"></div>
     <div class="container">
         <div class="write">
             <div class="write-con">
@@ -49,4 +49,5 @@
         </div>
     </div>
 </body>
+<div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
