--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,13 +18,16 @@
     <div class="container">
         <div class="login">
             <div class="login-con">
-                <div class="login-form">
+                <div class="title">
                     <h1>로그인</h1>
-                    <a th:href="@{/member/login}">일반회원 로그인</a>
-                    <a th:href="@{/semiMember/login}">간편회원 로그인</a>
+                </div>
+                <div class="login-form">
+                    <a th:href="@{/member/login}" class="loginA">일반회원 로그인</a>
+                    <a th:href="@{/semiMember/login}" class="semilogin">간편회원 로그인</a>
                 </div>
             </div>
         </div>
     </div>
 </th:block>
+<div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
