--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,3 +1,94 @@
 @import url(/css/common/reset.css);
 @import url(/css/common/header.css);
 @import url(/css/common/footer.css);
+/* container */
+.container{
+    width: 100%;
+}
+.container .login{
+    width: 100%;
+    height: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    box-sizing: border-box;
+}
+.container .login .login-con{
+    flex-basis: 800px;
+
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    gap: 50px;
+}
+.container .login .login-con .title{
+    padding: 20px;
+    gap: 10px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    border-bottom: 2px solid #7285d3a4;
+}
+/* login-form */
+.container .login .login-con .login-form{
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    box-sizing: border-box;
+    align-items: center;
+}
+/*  일반 로그인 버튼 */
+.container .login .login-con .login-form .loginA{
+    position: relative;
+    display: inline-block;
+    font-size: 22px;
+    padding: 20px 60px;
+    color: white;
+    margin: 20px 10px 10px;
+    border-radius:10px;
+    text-align: center;
+    transition: top .01s linear;
+    text-shadow: 0 1px 0 #19244F;  
+
+    background-color: #5870CB;
+    box-shadow: 0 0 0 1px #1d2a5ca9 inset,
+          0 0 0 2px #3E5AC3 inset,
+          0 8px 0 0 #7286D3,
+          0 8px 0 1px #111835,
+          0 8px 8px 1px #111835;
+}
+.container .login .login-con .login-form .loginA:hover{
+    background-color: #7285d3;
+}
+.container .login .login-con .login-form .loginA:active{
+    top: 9px;
+}
+/* 간편 로그인 버튼 */
+.container .login .login-con .login-form .semilogin{
+    position: relative;
+    display: inline-block;
+    font-size: 22px;
+    padding: 20px 60px;
+    color: white;
+    margin: 20px 10px 10px;
+    border-radius: 10px;
+    text-align: center;
+    transition: top .01s linear;
+    text-shadow: 0 1px 0 rgba(0,0,0,0.15);  
+
+    background-color: #5870CB;
+    box-shadow: 0 0 0 1px #1d2a5ca9 inset,
+          0 0 0 2px #3E5AC3 inset,
+          0 8px 0 0 #7286D3,
+          0 8px 0 1px #111835,
+          0 8px 8px 1px #111835;
+}
+.container .login .login-con .login-form .semilogin:hover{
+    background-color: #7285d3;
+}
+.container .login .login-con .login-form .semilogin:active{
+    top: 9px;
+}
