--- a/src/main/resources/templates/fragments/common/header.html
+++ b/src/main/resources/templates/fragments/common/header.html
@@ -53,7 +53,10 @@
                     <li>
                         <form th:action="@{/}">
                             <input type="text" name="search" id="search" placeholder="검색어를 입력하세요">
-                            <input type="submit" value="검색">
+                            <button type="submit">
+                                <img th:src="@{/images/zoom.png}" alt="검색" class="zoom">
+                            </button>
+<!--                            <input type="submit" value="검색">-->
                         </form>
                     </li>
                 </ul>
@@ -62,7 +65,7 @@
         <div class="bottom-nav">
             <div class="gnb">
                 <ul>
-                    <li><a th:href="@{/}">Cloth Keeper</a></li>
+                    <li><a th:href="@{/}" class="main">Cloth Keeper</a></li>
                     <li><a href="#new">New</a></li>
                     <!--                    조회순으로-->
                     <li><a href="#top10">Top 10</a></li>
