--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -3,15 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>회원가입</title>
+    <link rel="stylesheet" th:href="@{/css/join.css}">
 </head>
 <body>
 <div th:replace="~{fragments/common/header :: headerFragment}"></div>
 <!--<div th:replace="~{fragments/common/header_SONG :: headerFragment}"></div>-->
-<h1>회원가입</h1>
-<!-- 일반 회원가입 버튼 -->
-<button th:onclick="window.location.href='/member/join'">일반 회원가입</button>
-<!-- 간편 회원가입 버튼 -->
-<button th:onclick="window.location.href='/semiMember/join'">간편 회원가입</button>
+<div class="container">
+    <div class="join">
+        <div class="join-con">
+            <div class="title">
+                <h1>회원가입</h1>
+            </div>
+            <div class="button">
+                <!-- 일반 회원가입 버튼 -->
+                <button th:onclick="window.location.href='/member/join'" class="joinBtn">일반 회원가입</button>
+                <!-- 간편 회원가입 버튼 -->
+                <button th:onclick="window.location.href='/semiMember/join'" class="semijoinBtn">간편 회원가입</button>    
+            </div>
+        </div>
+    </div>
+</div>
 </body>
-
+<div th:replace="~{fragments/common/footer :: footerFragment}"></div>
 </html>
